# Backend/runBackend.py
@@ -112,6 +112,9 @@ def undoReportContainer():
 def getallContainers():
     return containerHandler.GetallRelationships(request,relationshipDao,True)
 
+@app.route("/getCounts",methods =['GET'])
+def getCounts():
+    return containerHandler.GetCountsforSite(request,relationshipDao,True)
 #----------------------------Auth Methods --------------------------------
 @app.route('/validateCode', methods=['POST'])
 def validateCode():
